--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,8 +13,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryDark"
             android:elevation="4dp"
+            map:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             map:layout_constraintTop_toTopOf="parent"
             map:layout_constraintStart_toStartOf="parent"/>
 
@@ -22,9 +23,9 @@
             android:id="@+id/progressBar"
             android:layout_width="match_parent"
             android:layout_height="4dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryDark"
             android:indeterminate="true"
-            android:visibility="visible"
+            android:visibility="gone"
             android:elevation="4dp"
             map:layout_constraintTop_toBottomOf="@id/toolbar"
             map:layout_constraintStart_toStartOf="parent"
